--- a/Welding.html
+++ b/Welding.html
@@ -371,6 +371,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<script>
 
 			$(document).ready(function () {
+				Main.OpenFilter()
 				Main.RotationView()
 				Welding.initialTable()
 				Welding.GetData()
