--- a/Testing.html
+++ b/Testing.html
@@ -19,6 +19,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<title>Welding | Training </title>
 		<meta name="description" content="Updates and statistics" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
 		<!--begin::Fonts-->
 		<link rel="stylesheet" href="https://ericsa2300.github.io/MetronicTemplate/Font.css"/>
 		<!--end::Fonts-->
