--- a/Training.html
+++ b/Training.html
@@ -189,7 +189,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 								<div class="row mt-5" id="TrainingPanel">
 									<div class="col-lg-12">
-										<div id="MobileTrainingPanel" class="row">
+										<div id="MobileTrainingPanel">
 											<!-- <div class="mobileViewTraining card card-custom card-stretch gutter-b bg-light-success ml-2 mr-2" style="margin-bottom: 10px">
 												<div class="card-body pt-4">
 													<div class="d-flex flex-wrap align-items-center mb-1">
