--- a/Training.html
+++ b/Training.html
@@ -32,7 +32,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<link href="https://ericsa2300.github.io/MetronicTemplate/datatables.bundle.css" rel="stylesheet" type="text/css"/>
 		<!--end::Global Theme Styles-->
 		<!--end::Layout Themes-->
-		<link rel="shortcut icon" href="https://preview.keenthemes.com/metronic/theme/html/demo1/dist/assets/media/logos/favicon.ico" />
+		<link rel="shortcut icon" href="https://novprofab.github.io/NOV/Training.ico" />
 
 		<!-- <script src="https://ericsa2300.github.io/MetronicTemplate/jquery_3.6.js"></script> -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.js" type="text/javascript"></script>
